Fix z-index header_cart-list

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -733,6 +733,7 @@
     box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.8);
     display: none;
     cursor: default;
+    z-index: 1;
 }
 
 .header__cart-list--no-cart{
